--- a/frontend/myapp-bcg/src/App.css
+++ b/frontend/myapp-bcg/src/App.css
@@ -4,7 +4,7 @@
  }
  body {
     font-family: Arial, sans-serif;
-    background: #322e2e;
+    background: #1e262f;
     color: #eee;
     height: 100vh;
     display: flex;
